# Shatter

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  SUPPORTED_HASHES.md  build.py  examples.txt  pyproject.toml  requirements.txt  shatter.pyw  shatter.spec  technical_debt.md
core/: __init__.py  cap_parser.py  crack_manager.py  detector.py  downloader.py  engine.py  engine_base.py  extractor.py  hc_engine.py  hc_event_parser.py  jtr_engine.py  jtr_event_parser.py  log_config.py  potfile_parser.py  process.py  result.py  sanitizer.py  tool_paths.py
docs/screenshots/: README.md
tests/: conftest.py  test_all_fallbacks.py  test_detector.py  test_engine.py  test_handlers.py  test_hashcat_examples.py  test_potfile.py  test_stress_211.py
ui/: __init__.py  api.py  api_config.py  api_crack.py  api_download.py  dashboard.py  envelope.py  handlers.py  potfile.py  settings.py  theme.py
ui/web/: app.js  index.html  style.css  tailwind.config.js
